--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -1,39 +1,59 @@
 <div class="row" ng-show="hasScore">
+  <div class="col-xs-12">
+    <h3 ng-bind="getNameClient"
+        style="text-align:center;
+            text-transform: uppercase;
+            color:#ffffff;" ></h3>
+  </div>
+  <div style="position:absolute; top: 150px; background: #ffffff; width: 100%; height:2px;"></div>
 
 
-    <div id="tournamentScroll" class="wrapper" ng-style="getHeight()">
-        <div class="scroller" ng-style="getWidth()">
+  <div  style="position:absolute;
+              top: 100px;
+              left:0;
+              right: 0;
+              display:block;
+              width:100px;
+              height: 100px;
+              line-height: 25px;
+              background-color: rgb(122,184,0)  !important;
+              border-radius: 50%;
+              text-align:center;
+              color:   rgb(0,40,120);
+              font-size:1.8em;
+              margin: 0 auto  !important;
+              border-style: solid;
+              border-width: 2px;
+              border-color: #ffffff;">
 
-            <div class="row">
-              <div class="col-xs-12" style="text-align:center;">
-                <h3 ng-bind="getNameClient" style="text-align:center;" ></h3>
-                <div  class="h-circle yellow">
-                  <div style="height:30px;
-                                position: absolute;
-                                top: 0;
-                                left: 0;
-                                bottom: 0;
-                                right: 0;
-                                margin: auto;">
-                    <span ng-bind="getTotalPointsClient" style="font-size: 3em; display:block; margin-bottom:10px;" ></span>
-                    <span translate style="font-size: 1.6em;">LEADERBOARD.POINTS</span>
-                  </div>
-                </div>
-              </div>
-            </div>
+    <div style="height:35px; position: absolute; top: 0; left: 0; bottom: 0; right: 0; margin: auto; color:#ffffff; ">
+      <span ng-bind="getTotalPointsClient"  style="text-transform: uppercase; font-size:2em !important; display:block;" ></span>
+      <span translate style="font-size: 1em; ">LEADERBOARD.POINTS</span>
+    </div>
 
-            <div class="row" style="margin-top:10px;">
+  </div>
+</div>
+
+<div class="row" ng-show="hasScore">
+
+
+
+
+    <div id="tournamentScroll" class="wrapper">
+        <div class="scroller" >
+
+            <div class="row" >
                 <div class="col-xs-12" >
                     <table class="table h-table">
                         <thead>
                             <tr >
-                                <th class="h-header green" style="text-align:left; width:60%;">
+                                <th class="h-header yellow" style="text-align:left; width:60%;">
                                     <span translate>LEADERBOARD.TOURNAMENT</span>
                                 </th >
-                                <th class="h-header green" style="width:20%;">
+                                <th class="h-header yellow" style="width:20%;">
                                     <span translate>LEADERBOARD.HITS</span>
                                 </th>
-                                <th class="h-header green" style="width:20%;">
+                                <th class="h-header yellow" style="width:20%;">
                                     <span translate>LEADERBOARD.POINTS</span>
                                 </th>
                             </tr>
