FUTBOL BRASIL: No hay juego

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -50,7 +50,18 @@
                 <div class="col-xs-12">
                   <p class="h-body" ng-bind-html="contentNews.body"></p>
                 </div>
+
+
+
             </div>
+
+          <div class="row" style="border-top: solid 1pt rgb(254,209,0);">
+
+            <div class="col-xs-12" style="margin: 15px auto; " >
+              <span translate>NEWS.SOURCE</span><span>: Perform Group</span>
+            </div>
+          </div>
+
         </div>
     </div>
 
