--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
@@ -15,7 +15,8 @@
 
                             <input type="text" class="form-control" id="inputDefault"
                                    ng-disabled="!isEditing" ng-model="nickname"
-                                   placeholder="{{ 'SETTINGS.NICKNAME_PLACEHOLDER' | translate}}">
+                                   placeholder="{{ 'SETTINGS.NICKNAME_PLACEHOLDER' | translate}}"
+                                   maxlength="16">
 
                             <span class="input-group-btn">
                                 <button type="button" ng-click="saveNickname()"
@@ -48,7 +49,7 @@
                                ng-src="{{team.team_logo}}"
                                ng-click="teamSelected(team)"
                                onerror="this.src='img/shield-1.png'"
-                               ng-show="!isEmptySlot(team)">
+                               ng-hide="isEmptySlot(team)">
 
                             <i class="btn btn-delete-item btn-raised mdi-content-clear"
                                ng-click="removeTeam(team)"
