--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -1,4 +1,4 @@
-<div class="row" ng-show="hasScore">
+<div class="row h-points" ng-show="hasScore" >
   <div class="col-xs-12">
     <h3 ng-bind="getNameClient"
         style="text-align:center;
@@ -6,8 +6,6 @@
             color:#ffffff;" ></h3>
   </div>
   <div style="position:absolute; top: 150px; background: #ffffff; width: 100%; height:2px;"></div>
-
-
   <div  style="position:absolute;
               top: 100px;
               left:0;
@@ -25,12 +23,10 @@
               border-style: solid;
               border-width: 2px;
               border-color: #ffffff;">
-
     <div style="height:35px; position: absolute; top: 0; left: 0; bottom: 0; right: 0; margin: auto; color:#ffffff; ">
       <span ng-bind="getTotalPointsClient"  style="text-transform: uppercase; font-size:2em !important; display:block;" ></span>
       <span translate style="font-size: 1em; ">LEADERBOARD.POINTS</span>
     </div>
-
   </div>
 </div>
 
