--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="row" ng-show="hasScore">
-    <div id="tournamentScroll" class="wrapper">
+    <div id="wrapper" class="page wrapper">
         <div class="scroller" >
           <div class="container">
 
@@ -58,7 +58,7 @@
 
                     <td class="h-ellipsis-truncate" style="text-align: left; width:60%;" >
                       <img class="h-shield  h-tree" ng-src="{{getCompetitionShield(tournament.logo)}}" onerror="this.src='img/shield-1.png'">
-                      <span ng-bind="tournament.name" style="font-weight:bold;"></span>
+                      <span ng-bind="tournament.name" ></span>
                     </td>
 
                     <td style="text-center-vertical; width:20%;">
