FUTBOL BRASIL: Source

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <div class="panel panel-primary">
+            <div class="panel panel-primary" ng-hide="isWebPlatform()">
                 <div class="panel-heading">
                     <h3 class="panel-title">
                         <span class="mdi-social-notifications-on"></span>
@@ -114,7 +114,7 @@
                 </div>
             </div>
 
-            <div class="panel panel-success">
+            <!--div class="panel panel-success">
                 <div class="panel-heading">
                     <h3 class="panel-title">
                         <span class="mdi-action-language"></span>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div--->
 
             <div class="panel panel-info">
                 <div class="panel-heading">
