--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -21,6 +21,7 @@
                         <div id="{{vWrapper.getName($index)}}" class="wrapper">
                             <div class="scroller">
                                 <div class="container">
+                                  <div class="row" >
                                     <div class="col-xs-12" >
                                         <table  ng-show="league.scorers" class="table h-table">
                                             <thead>
@@ -52,6 +53,15 @@
                                             </tbody>
                                         </table>
                                     </div>
+
+                                  </div>
+
+                                  <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt rgb(254,209,0);">
+                                    <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
+                                      {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
+                                    </div>
+                                  </div>
+
                                 </div>
                             </div>
                         </div>
