--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -129,6 +129,14 @@
                     </table>
                   </div>
                 </div>
+
+
+                <div class="row h-source" style="border-top: solid 1pt rgb(254,209,0);">
+                  <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
+                    {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
+                  </div>
+                </div>
+
               </div>
 
               <div ng-if="!item.isTree">
@@ -208,6 +216,14 @@
                     </table>
                   </div>
                 </div>
+
+
+                <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt rgb(254,209,0);">
+                  <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
+                    {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
