--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -110,6 +110,8 @@
             <div id="{{vWrapper.getName($index)}}" class="wrapper">
               <div class="scroller" >
                 <div class="container">
+
+                  <div class="row">
                   <div class="col-xs-12"
                        ng-repeat="fixture in league.fixtures track by fixture.date"
                        on-last-repeat>
@@ -173,6 +175,15 @@
                       </tbody>
                     </table>
                   </div>
+                </div>
+
+                  <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt rgb(254,209,0);">
+                    <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
+                      {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
+                    </div>
+                  </div>
+
+
                 </div>	<!--container-->
               </div>	<!--scroller-->
             </div> <!--wrapper-->
