--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
@@ -1,7 +1,7 @@
 <div id="wrapperH">
     <div id="scroller" ng-style="getTotalWidth()">
         <ul>
-            <li ng-style="getWidth()" ng-repeat="page in pages track by page.id" on-last-repeat>
+            <li ng-style="getWidth()" ng-repeat="page in pages track by page.id" >
                 <div class="container">
 
                     <div class="row h-header green">
@@ -24,7 +24,7 @@
 
                                   <div class="row" >
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-                                        <table class="table" ng-repeat="league in page.matches.leagues">
+                                        <table class="table" ng-repeat="league in page.matches.leagues" on-last-repeat>
                                             <thead>
                                             <tr>
                                                 <th colspan="3" class="h-header light-blue">
