FUTBOL BRASIL: Localización de titulo lista general.

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -12,7 +12,9 @@
                       </div>
                       <div class="col-xs-8 h-ellipsis-truncate">
                         <img class="h-shield h-tree" ng-src="{{getCompetitionShield(competition.competiton_type.competition_logo)}}" onerror="this.src='img/shield-1.png'">
-                        <span ng-bind="competition.competiton_type.name" class="caption"></span>
+
+                        <span ng-hide="$index===0" ng-bind="competition.competiton_type.name" class="caption"></span>
+                        <span ng-show="$index===0" class="caption" translate>LEADERBOARD.GENERAL</span>
                       </div>
                       <div class="col-xs-2" ng-click="nextPage($index)">
                         <span class="mdi-navigation-arrow-forward" ng-hide="item.competitions[$index+1].name === undefined"></span>
