--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -12,7 +12,6 @@
                       </div>
                       <div class="col-xs-8 h-ellipsis-truncate">
                         <img class="h-shield h-tree" ng-src="{{getCompetitionShield(competition.competiton_type.competition_logo)}}" onerror="this.src='img/shield-1.png'">
-
                         <span ng-hide="$index===0" ng-bind="competition.competiton_type.name" class="caption"></span>
                         <span ng-show="$index===0" class="caption" translate>LEADERBOARD.GENERAL</span>
                       </div>
@@ -23,7 +22,7 @@
 
 
                     <div class="row " style="margin: 0 !important;">
-                      <div class="col-xs-12 h-header red" style="text-align:right;" >
+                      <div class="col-xs-12 h-header red" style="text-align:right;" ng-hide="$index===0">
 
                         <span class="badge disabled"
                               ng-class="{'disabled': isActive('competition{{$index}}')}"
