--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
@@ -2,6 +2,9 @@
   <div id="scroller" ng-style="getTotalWidth()">
     <ul>
       <li ng-style="getWidth()">
+        <img  class="h-img-tutorial"  src="img/tutorial/{{language}}/0.png" onerror="this.src='img/tutorial/pt/0.png'">
+      </li>
+      <li ng-style="getWidth()">
         <img  class="h-img-tutorial"  src="img/tutorial/{{language}}/1.png" onerror="this.src='img/tutorial/pt/1.png'">
       </li>
       <li ng-style="getWidth()">
@@ -26,6 +29,7 @@
     <i class="mdi-toggle-radio-button-off" ng-class="getToggleOnClass(2)"></i>
     <i class="mdi-toggle-radio-button-off" ng-class="getToggleOnClass(3)"></i>
     <i class="mdi-toggle-radio-button-off" ng-class="getToggleOnClass(4)"></i>
+    <i class="mdi-toggle-radio-button-off" ng-class="getToggleOnClass(5)"></i>
   </div>
 
 </div>
