FUTBOL BRASIL: Tabla general en friends y se valida estatus del partido en mtm

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -130,7 +130,7 @@
         <span  class="h-goal-team" >-</span>
         <span ng-bind="item.match.away.goals" class="h-goal-team" ></span>
         <br />
-        <span class="status _{{item.match.status.id}}">{{ item.match.status.name | translate}}</span>
+        <span class="status _{{item.match.status.id_status}}">{{ item.match.status.name | translate}}</span>
       </div>
 
       <div class="row">
