--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -1361,7 +1361,8 @@ h6.team-name {
   }
   .content-dashboard  tr.h-match {border-bottom: 1.5px #ffffff solid !important;}
 
-  .content-leaderboard li:first-child .wrapper{
+  .content-friends li:first-child .wrapper,
+  .content-leaderboard li:first-child .wrapper {
     top: -30px;
   }
 
