FUTBOL BRASIL: Ajuste de l&f COS I

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -1,4 +1,4 @@
-<div class="row h-header green">
+<div class="row h-header yellow">
     <div class="col-xs-12" >
         <span >{{date}}</span>
     </div>
@@ -58,7 +58,7 @@
                     </table>
                 </div>
             </div>
-            <div class="row h-source" style="border-top: solid 1pt rgb(254,209,0);" ng-show="showSource">
+            <div class="row h-source" style="border-top: solid 1pt #fffb4c;" ng-show="showSource">
               <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                 {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
               </div>
@@ -106,7 +106,7 @@
                     </table>
                 </div>
             </div>
-            <div class="row h-source" style="border-top: solid 1pt rgb(254,209,0);" ng-show="showSource">
+            <div class="row h-source" style="border-top: solid 1pt #fffb4c;" ng-show="showSource">
               <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                 {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
               </div>
