--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
@@ -146,7 +146,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-12">
-                            <button class="btn text-center btn-facebook btn-info"
+                            <button style="padding: 8px !important;" class="btn text-center btn-facebook btn-info"
                                     ng-class="fbObject.class"
                                  ng-click="onFbButtonClick()"
                                  ng-bind="fbObject.fbButtonMsg">
