--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -6,7 +6,7 @@
 
                   <div class="container" style="padding: 0 !important;">
 
-                    <div class="row h-header green"  style="margin: 0 !important;">
+                    <div class="row h-header red"  style="margin: 0 !important;">
                       <div class="col-xs-2" ng-click="prevPage($index)">
                         <span class="mdi-navigation-arrow-back" ng-hide="item.competitions[$index-1].name === undefined"></span>
                       </div>
@@ -23,7 +23,7 @@
 
 
                     <div class="row " style="margin: 0 !important;">
-                      <div class="col-xs-12 h-header red" style="text-align:right;" ng-hide="$index===0">
+                      <div class="col-xs-12 h-header black" style="text-align:right;" ng-hide="$index===0">
 
                         <span class="badge disabled"
                               ng-class="{'disabled': isActive('competition{{$index}}')}"
