--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -1,4 +1,4 @@
-<div class="row h-header green">
+<div class="row h-header red">
     <div class="col-xs-12" >
         <span >{{date}}</span>
     </div>
@@ -12,7 +12,7 @@
                     <table class="table" ng-repeat="league in item.leagues" on-last-repeat>
                         <thead>
                             <tr>
-                                <th colspan="3" class="h-header light-blue">
+                                <th colspan="3" class="h-header gray">
                                   <img class="h-shield h-tree" ng-src="{{getCompetitionShield(league.competiton_type.competition_logo)}}" onerror="this.src='img/shield-1.png'">
                                   <span ng-bind="league.competiton_type.name"></span>
                                 </th>
@@ -58,7 +58,7 @@
                     </table>
                 </div>
             </div>
-            <div class="row h-source" style="border-top: solid 1pt rgb(254,209,0);" ng-show="showSource">
+            <div class="row h-source" style="border-top: solid 1pt #e5e5e5;" ng-show="showSource">
               <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                 {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
               </div>
@@ -106,7 +106,7 @@
                     </table>
                 </div>
             </div>
-            <div class="row h-source" style="border-top: solid 1pt rgb(254,209,0);" ng-show="showSource">
+            <div class="row h-source" style="border-top: solid 1pt #e5e5e5;" ng-show="showSource">
               <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                 {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
               </div>
