--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -69,7 +69,7 @@
 
             </div>
 
-          <div class="row" style="border-top: solid 1pt rgb(254,209,0);">
+          <div class="row" style="border-top: solid 1pt #e5e5e5;">
             <div class="col-xs-12" style="margin: 15px auto; " >
               <span translate>NEWS.SOURCE</span><span>: Perform Group</span>
             </div>
