--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -40,13 +40,13 @@
                 <table class="table h-table">
                   <thead>
                   <tr >
-                    <th class="h-header yellow" style="text-align:left; width:60%;">
+                    <th class="h-header black" style="text-align:left; width:60%;">
                       <span translate>LEADERBOARD.TOURNAMENT</span>
                     </th >
-                    <th class="h-header yellow" style="width:20%;">
+                    <th class="h-header black" style="width:20%;">
                       <span translate>LEADERBOARD.HITS</span>
                     </th>
-                    <th class="h-header yellow" style="width:20%;">
+                    <th class="h-header black" style="width:20%;">
                       <span translate>LEADERBOARD.POINTS</span>
                     </th>
                   </tr>
