--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -37,7 +37,7 @@
         <div class="container">
 
           <div class="row">
-            <div class="col-xs-12 h-header green h-ellipsis-truncate">
+            <div class="col-xs-12 h-header red h-ellipsis-truncate">
               <img class="h-shield h-tree" ng-src="{{getCompetitionShield(item.competition.competiton_type.competition_logo)}}" onerror="this.src='img/shield-1.png'">
               <span class="h-headline" ng-bind="item.competition.competiton_type.name"></span>
             </div>
@@ -90,7 +90,7 @@
                     <table class="table">
                       <thead>
                       <tr>
-                        <th colspan="8" class="h-header light-blue">
+                        <th colspan="8" class="h-header gray">
                           <span>{{fromNow(ranking.date)}}</span>
                         </th>
                       </tr>
@@ -131,7 +131,7 @@
                 </div>
 
 
-                <div class="row h-source" style="border-top: solid 1pt rgb(254,209,0);">
+                <div class="row h-source" style="border-top: solid 1pt #e5e5e5;">
                   <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                     {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
                   </div>
@@ -145,31 +145,31 @@
                     <table class="table h-table">
                       <thead>
                       <tr>
-                        <th colspan="8" class="h-header green">
+                        <th colspan="8" class="h-header yellow">
                           <span ng-bind="rankings.group_name"></span>
                         </th>
                       </tr>
                       <tr>
-                        <th class="h-header light-blue"></th>
-                        <th class="h-header light-blue" style="text-align: left;" translate>
+                        <th class="h-header gray"></th>
+                        <th class="h-header gray" style="text-align: left;" translate>
                           STANDINGS.TEAM
                         </th>
-                        <th class="h-header light-blue" translate>
+                        <th class="h-header gray" translate>
                           STANDINGS.TABLE.POINTS
                         </th>
-                        <th class="h-header light-blue" translate>
+                        <th class="h-header gray" translate>
                           STANDINGS.TABLE.MATCHES
                         </th>
-                        <th class="h-header light-blue" translate>
+                        <th class="h-header gray" translate>
                           STANDINGS.TABLE.MATCHES_WON
                         </th>
-                        <th class="h-header light-blue" translate>
+                        <th class="h-header gray" translate>
                           STANDINGS.TABLE.MATCHES_DRAWN
                         </th>
-                        <th class="h-header light-blue" translate>
+                        <th class="h-header gray" translate>
                           STANDINGS.TABLE.MATCHES_LOST
                         </th>
-                        <th class="h-header light-blue" translate>
+                        <th class="h-header gray" translate>
                           STANDINGS.TABLE.GOALS_FOR
                         </th>
                       </tr>
@@ -204,12 +204,10 @@
                                                       class="text-center-vertical"></span>
                         </td>
                         <td >
-                                                <span ng-bind="ranking.matches_lost"
-                                                      class="text-center-vertical"></span>
+                                                <span ng-bind="ranking.matches_lost" class="text-center-vertical"></span>
                         </td>
                         <td >
-                                                <span ng-bind="ranking.goals_for"
-                                                      class="text-center-vertical"></span>
+                          <span ng-bind="ranking.goals_for" class="text-center-vertical"></span>
                         </td>
                       </tr>
                       </tbody>
@@ -218,7 +216,7 @@
                 </div>
 
 
-                <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt rgb(254,209,0);">
+                <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt #e5e5e5;">
                   <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                     {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
                   </div>
