--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -5,7 +5,7 @@ row:not(input):not(textarea) {
 
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 html { -ms-touch-action: none; font-family: Helvetica; }
-body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; width: 100%; height: 100%; color:#002878; background:#ffffff !important; font-size: 62.5% important;}
+body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; width: 100%; height: 100%; color:#000000; background:#ffffff !important;  font-family: Helvetica,Arial,sans-serif !important; font-size: 62.5% important;}
 
 
 .footer-section{color: #FFFFFF !important; text-decoration: none  !important; }
@@ -48,21 +48,21 @@ header, footer {
     width: 100%;
     height: 50px;
     line-height: 50px;
-    background: rgb(0,40,120);
+    background: #000000;
     padding: 0 !important;
     margin:0 !important;
     border: 0;
 }
 
 header {
-    background: rgb(44,156,211);
+    background: #000000;
 }
 
 footer {
     line-height: 25px;
-    color:#002878;
+    color:#ffffff;
     bottom: 0;
-    background: rgb(0,40,120);
+    background: #000000;
     z-index: 10;
 }
 
@@ -89,11 +89,11 @@ footer .glyphicon-class {
 }
 
 footer .option.active {
-    background-color: rgb(254,209,0);
+    background-color: #ce0500;
 }
 
 footer .option.active span {
-  color:#002878 !important;
+  color:#ffffff !important;
 }
 
 header .section {
@@ -135,16 +135,14 @@ table tr th {
 
 table tbody tr td.active {
   background: #fed100 !important;
-  color: #002878 !important;
+  color: #000000 !important;
 }
 
 table tbody tr td span.active,
 table tbody tr td img.active{
   background: rgb(254,209,0) !important;
-  color: #002878 !important;
+  color: #000000 !important;
 }
-
-
 
 .content-leaderboard table tbody tr,
 .content-leaderboard table tbody tr td,
@@ -174,7 +172,7 @@ div.header {
     width: 100%;
     height: 35px;
     line-height: 35px;
-    background-color: rgb(122,184,0);
+    background-color: #7cbc00;
     padding: 0 !important;
     margin:0 !important;
     border: 0;
@@ -249,7 +247,7 @@ div.header {
     width: 100%;
     height: 35px;
     line-height: 35px;
-    background-color: rgb(122,184,0);
+    background-color: #7cbc00;
     padding: 0 !important;
     margin:0 !important;
     border: 0;
@@ -466,13 +464,13 @@ body.content-mtm .row-back {
 /*menu*/
 
 .content-menu,
-.content-sub-menu {background:#ffffff; height: 50px; line-height:50px; color:#134985; margin-left: 32px;}
+.content-sub-menu {background:#ffffff; height: 50px; line-height:50px; color:#000000; margin-left: 32px;}
 .content-menu div.col-xs-8,
-.content-sub-menu div.col-xs-8{border-bottom: solid 1pt #ffca00; padding-left:0 !important;}
+.content-sub-menu div.col-xs-8{border-bottom: solid 1pt #e5e5e5; padding-left:0 !important;}
 .content-menu span:last-child {text-transform:uppercase;}
 
 .content-sub-menu div.col-xs-8 {
-  border-bottom: solid 1pt #134985;
+  border-bottom: solid 1pt #00000;
   padding-left:0 !important;
 }
 
@@ -493,7 +491,7 @@ body.content-mtm .row-back {
 }
 
 .btn-delete-item {
-    background-color: #f44336 !important;
+    background-color: #ce0500 !important;
     border-radius: 100%;
     padding: 6px;
     width: 24px;
@@ -551,7 +549,7 @@ body.content-mtm .row-back {
 }
 
 .btn-orange {
-    background-color: rgb(44,156,211) !important;
+    background-color: #000000 !important;
     color: #FFF !important;
 }
 
@@ -567,7 +565,7 @@ body.content-mtm .row-back {
 
 .section-header {
     line-height: 35px;
-    background-color: rgb(122,184,0);
+    background-color: #7cbc00;
     color: #FFF;
 }
 
@@ -764,7 +762,7 @@ body.content-mtm .row-back {
     display: none !important;
 }
 .client {
-  color:#ff5722 !important;
+  color:#ce0500 !important;
   font-weight: bold;
 }
 
@@ -792,17 +790,23 @@ h6.team-name {
     }
 
     .h-header.green {
-      background: rgb(122,184,0);
+      background: #7cbc00;
+      color: #ffffff;
+    }
+
+
+    .h-header.black {
+      background: #000000;
       color: #ffffff;
     }
 
     .h-header.yellow {
       background: rgb(254,209,0);
-      color: rgb(0,40,120);
+      color: #000000;
     }
 
     .h-header.blue {
-      background: rgb(0,40,120);
+      background: #0097ac;
       color: #ffffff;
     }
 
@@ -812,7 +816,17 @@ h6.team-name {
     }
 
     .h-header.red {
-      background: rgb(227,114,34);
+      background: #ce0500;
+      color: #ffffff;
+    }
+
+    .h-header.gray {
+      background: #e5e5e5;
+      color: #000000;
+    }
+
+    .h-header.orange {
+      background: #ff8033;
       color: #ffffff;
     }
 
@@ -830,7 +844,7 @@ h6.team-name {
       text-align: left;
       min-height:50px;
       line-height: 50px;
-      border-bottom: solid 1pt rgb(254,209,0);
+      border-bottom: solid 1pt #e5e5e5;
       /*font-weight:bold;*/
     }
 
@@ -850,8 +864,7 @@ h6.team-name {
 
     .content-news .h-moment {
       font-size:1.2em;
-      /*font-weight:bold;*/
-      color: rgb(44,156,211);
+      color: #ce0500;
     }
 
     .content-news .h-body {
@@ -910,7 +923,7 @@ h6.team-name {
     }
 
     .content-prediction .wrapper { top: 70px; }
-    tr.h-match { border-bottom: 1.5px rgb(44,156,211) solid !important; }
+    tr.h-match { border-bottom: 1.5px #e5e5e5 solid !important; }
     tr.h-match:last-child { border: 0 !important; }
     tr.h-match td { height: auto;} /*vertical-align:middle;*/
     tr.h-match td .h-name-team {display:block; height: auto; }
@@ -942,7 +955,7 @@ h6.team-name {
     }
 
     header .h-logo {
-      width: 55px;
+      width: 40px;
       vertical-align:middle;
       margin-right: 5px;
     }
@@ -972,13 +985,10 @@ h6.team-name {
     .panel-warning  > .panel-heading,
     .panel-primary  > .panel-heading,
     .panel-success  > .panel-heading,
-    .panel-info > .panel-heading {
-      background  : rgb(44,156,211);
-    }
-
+    .panel-info > .panel-heading,
     .btn-primary:not(.btn-link):not(.btn-flat),
-    .btn-success:not(.btn-link):not(.btn-flat) {
-      background  : rgb(44,156,211);
+    .btn-success:not(.btn-link):not(.btn-flat){
+      background  : #000000;
     }
 
     .btn-facebook {
@@ -1034,26 +1044,21 @@ h6.team-name {
       height: auto;
     }
 
-  .status._1 { color: rgb(227,114,34); }     /*Played*/
-  .status._2 { color: rgb(122,184,0);  }     /*Playing*/
-  .status._3 { color: rgb(0,40,120); }       /*Fixture*/
-  .status._4 { color: rgb(227,114,34);  }    /*Cancelled*/
+  .status._1 { color: #000000; }     /*Played*/
+  .status._2 { color: #e5e5e5;  }     /*Playing*/
+  .status._3 { color: rgb(0,0,0); }       /*Fixture*/
+  .status._4 { color: rgb(206,5,0);  }    /*Cancelled*/
   .status._5 { color: rgb(254,209,0);  }     /*Postponed*/
   .status._6 { color: rgb(254,209,0);  }     /*Suspended*/
 
 
-  .status.period { background: rgb(0,40,120);
-                         color: #ffffff;}
-
-  .status.period._9 {background: rgb(122,184,0);
-                          color: #ffffff; }
-
-  .status.period._8 {   background: rgb(254,209,0);
-                           color: rgb(0,40,120); }
+  .status.period { background: rgb(0,0,0); color: #ffffff;}
+  .status.period._9 {background: #e5e5e5; color: #000000; }
+  .status.period._8 {   background: rgb(254,209,0); color: #000000; }
 
 
     .h-event{
-      border-bottom: solid 1pt  rgb(44,156,211) !important;
+      border-bottom: solid 1pt #e5e5e5 !important;
     }
 
     .h-event:last-child {
@@ -1088,14 +1093,14 @@ h6.team-name {
     .content-news #wrapper2 *[class *= 'mdi-']{
       font-size:1.2em;
       font-weight:bold;
-      color: rgb(44,156,211);
+      color: #ce0500;
     }
 
     .content-menu *[class *= 'mdi-'],
     .content-menu *[class *= 'icon-'] {
       font-size:2em;
       vertical-align: middle;
-      color:  rgb(0,40,120);
+      color:  #000000;
     }
 
     .content-menu *[class *= 'icon-'] {
@@ -1235,18 +1240,15 @@ h6.team-name {
     }
 
     .badge {
-      background: rgb(44,156,211);
+      background: #ffffff;
       padding: 5px 15px;
       font-size:
       1em;
-      color: #ffffff;
+      color: #000000;
     }
 
     .badge.disabled {
-       background: rgb(44,156,211);
-       color: #ffffff;
-        opacity: 0.7;
-        filter: alpha(opacity=70);
+        background: rgb(254,209,0);
     }
 
 
@@ -1295,39 +1297,13 @@ h6.team-name {
 
 
   .list-group-item-heading {
-    color:  rgb(0,40,120) !important;
+    color:  #000000 !important;
   }
 
   .btn {
     font-size: 16px !important;
   }
 
-
-
-      @media only screen and (min-width: 320px) and (max-width: 800px) {
-            .content-dashboard {
-                background: rgb(122,184,0); !important;
-                background-image: url('../img/grama-480x800.jpg') !important;
-                background-size: auto;
-            }
-
-      }
-
-			@media only screen and (min-width: 800px) and (max-width: 1280px) {
-			    .content-dashboard {
-               background:  background: rgb(122,184,0); !important;
-               background-image: url('../img/grama-720x1280.jpg') !important;
-               background-size: auto;
-           }
-			}
-
-			@media only screen and (min-width:1280px) {
-			    .content-dashboard {
-               background:  background: rgb(122,184,0); !important;
-               background-image: url('../img/grama-1080x1920.jpg') !important;
-               background-size: cover;
-           }
-			}
 
 
 
@@ -1356,7 +1332,7 @@ h6.team-name {
    }
 
   .h-points  {
-    background: rgb(122,184,0) !important;
+    background: #7cbc00 !important;
     height: 225px;
   }
   .content-dashboard  tr.h-match {border-bottom: 1.5px #ffffff solid !important;}
